--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./images/box 1.jpg" alt="" width="370"/>
+                </li>
+                <li>
+                    <img src="./images/box 2.jpg" alt="" width="370"/>
+                </li>
+                <li>
+                    <img src="./images/box 3.jpg" alt="" width="370"/>
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
