--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <main>
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <a href="">Заказать услугу</a>
+            <form>
+                <button><a href="">Заказать услугу</a></button>
+            </form>
         </section>
         <section>
             <h2>Необходимые навыки</h2>
