--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <form>
-                <button><a href="">Заказать услугу</a></button>
+                <button type="button"><a href="">Заказать услугу</a></button>
             </form>
         </section>
         <section>
