--- a/index.html
+++ b/index.html
@@ -53,13 +53,30 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/box 1.jpg" alt="" width="370"/>
+                    <img src="./images/box 1.jpg" alt="ill. page-proofs" width="370"/>
                 </li>
                 <li>
-                    <img src="./images/box 2.jpg" alt="" width="370"/>
+                    <img src="./images/box 2.jpg" alt="ill. apps" width="370"/>
                 </li>
                 <li>
-                    <img src="./images/box 3.jpg" alt="" width="370"/>
+                    <img src="./images/box 3.jpg" alt="ill. css" width="370"/>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/img.jpg" alt="" width="270"/>
+                </li>
+                <li>
+                    <img src="./images/img-2.jpg" alt="" width="270"/>
+                </li>
+                <li>
+                    <img src="./images/img-3.jpg" alt="" width="270"/>
+                </li>
+                <li>
+                    <img src="./images/img-4.jpg" alt="" width="270"/>
                 </li>
             </ul>
         </section>
