--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/box 1.jpg" alt="ill. page-proofs" width="370"/>
+                    <img src="./images/box 1.jpg" alt="Иллюстрация верстки" width="370"/>
                 </li>
                 <li>
-                    <img src="./images/box 2.jpg" alt="ill. apps" width="370"/>
+                    <img src="./images/box 2.jpg" alt="Иллюстрация мобильного приложения" width="370"/>
                 </li>
                 <li>
-                    <img src="./images/box 3.jpg" alt="ill. css" width="370"/>
+                    <img src="./images/box 3.jpg" alt="Иллюстрация применения стилей" width="370"/>
                 </li>
             </ul>
         </section>
