--- a/index.html
+++ b/index.html
@@ -68,18 +68,36 @@
             <ul>
                 <li>
                     <img src="./images/img.jpg" alt="" width="270"/>
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img-2.jpg" alt="" width="270"/>
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img-3.jpg" alt="" width="270"/>
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img-4.jpg" alt="" width="270"/>
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
+    <footer>
+        <a href="">WebStudio</a>
+        <address>
+            <p>
+                г. Киев, пр-т Леси Украинки, 26
+                info@example.com
+                +38 099 111 11 11
+            </p>
+        </address>
+    </footer>
 </body>
 </html>
