--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <!--Main navigation-->
       <nav>
         <a href="">WebStudio</a>
         <ul>
@@ -16,18 +17,21 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
+      <!--Contact information-->
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
+      <!--Hero-->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <form>
           <button type="button"><a href="">Заказать услугу</a></button>
         </form>
       </section>
+      <!--Necessary skills-->
       <section>
         <h2>Необходимые навыки</h2>
         <ul>
@@ -61,6 +65,7 @@
           </li>
         </ul>
       </section>
+      <!--Main employments-->
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
@@ -87,6 +92,7 @@
           </li>
         </ul>
       </section>
+      <!--Our team-->
       <section>
         <h2>Наша команда</h2>
         <ul>
@@ -115,6 +121,7 @@
     </main>
     <footer>
       <a href="">WebStudio</a>
+      <!--Contacts-->
       <address>
         <p>
           г. Киев, пр-т Леси Украинки, 26 info@example.com +38 099 111 11 11
