--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <!--Main navigation-->
+      <!--main navigation-->
       <nav>
         <a href="">WebStudio</a>
         <ul>
@@ -17,21 +17,21 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <!--Contact information-->
+      <!--contact information-->
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <!--Hero-->
+      <!--hero-->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <form>
           <button type="button"><a href="">Заказать услугу</a></button>
         </form>
       </section>
-      <!--Necessary skills-->
+      <!--necessary skills-->
       <section>
         <h2>Необходимые навыки</h2>
         <ul>
@@ -65,7 +65,7 @@
           </li>
         </ul>
       </section>
-      <!--Main employments-->
+      <!--main employments-->
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
@@ -92,7 +92,7 @@
           </li>
         </ul>
       </section>
-      <!--Our team-->
+      <!--our team-->
       <section>
         <h2>Наша команда</h2>
         <ul>
@@ -121,7 +121,7 @@
     </main>
     <footer>
       <a href="">WebStudio</a>
-      <!--Contacts-->
+      <!--contacts-->
       <address>
         <p>
           г. Киев, пр-т Леси Украинки, 26 info@example.com +38 099 111 11 11
