--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <form>
-          <button type="button"></button><a href="">Заказать услугу</a></button>
+          <button type="button">Заказать услугу</button>
         </form>
       </section>
       <!--necessary skills-->
@@ -70,13 +70,25 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./images/box 1.jpg" alt="Иллюстрация верстки" width="370"/>
+            <img
+              src="./images/box 1.jpg"
+              alt="Иллюстрация верстки"
+              width="370"
+            />
           </li>
           <li>
-            <img src="./images/box 2.jpg" alt="Иллюстрация мобильного приложения" width="370"/>
+            <img
+              src="./images/box 2.jpg"
+              alt="Иллюстрация мобильного приложения"
+              width="370"
+            />
           </li>
           <li>
-            <img src="./images/box 3.jpg" alt="Иллюстрация применения стилей" width="370"/>
+            <img
+              src="./images/box 3.jpg"
+              alt="Иллюстрация применения стилей"
+              width="370"
+            />
           </li>
         </ul>
       </section>
