--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
       <!--hero-->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <form>
-          <button type="button">Заказать услугу</button>
-        </form>
+        <button type="button">Заказать услугу</button>
       </section>
       <!--necessary skills-->
       <section>
@@ -123,9 +121,11 @@
       <a href="">WebStudio</a>
       <!--contacts-->
       <address>
-        <p>
-          г. Киев, пр-т Леси Украинки, 26 info@example.com +38 099 111 11 11
-        </p>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
