--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <!--main navigation-->
+      <!--the main navigation-->
       <nav>
         <a href="">WebStudio</a>
         <ul>
